[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/Cervello_ProfiloGiocatore.gd" type="Script" id=1]
[ext_resource path="res://Menu/Immagini/BottoneMenu.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Label" type="Label" parent="CanvasLayer" index="0"]

modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 242.0
margin_top = 157.0
margin_right = 290.0
margin_bottom = 171.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Record:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="BestScore" type="Label" parent="CanvasLayer" index="1"]

modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 261.0
margin_top = 260.0
margin_right = 301.0
margin_bottom = 274.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Ciao"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Label2" type="Label" parent="CanvasLayer" index="2"]

modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 269.0
margin_top = 611.0
margin_right = 307.0
margin_bottom = 625.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Level:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors" ]

[node name="LevelComplete" type="Label" parent="CanvasLayer" index="3"]

modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_top = 741.0
margin_right = 314.0
margin_bottom = 755.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Ciao"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 224.0
margin_top = 1091.0
margin_right = 524.0
margin_bottom = 1191.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Textures" ]

[connection signal="button_down" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_button_down"]


